<resources>
    <string name="app_name">AboutScreen</string>
    <string name="title_text">Title Text</string>
    <string name="logo">logo</string>
    <string name="description_text">Description Text</string>
    <string name="version_no">Version: %1$s</string>
    <string name="please_like_us_on_facebook">Please like us on facebook.</string>
    <string name="link_button">link button</string>
    <string name="more_apps">More Apps</string>
</resources>
