<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/clBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.AboutUs">

    <include layout="@layout/toolbar" android:id="@+id/toolbar" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/cHeaderLayout">
        <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/logo"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/clogo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="16dp"/>

        <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/title_text"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/ivLogo"
                app:layout_constraintStart_toStartOf="@+id/ivLogo"
                app:layout_constraintTop_toBottomOf="@+id/ivLogo"/>

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35"/>


    <TextView
            android:gravity="center"
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/description_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"/>

    <TextView
            android:id="@+id/tvVersionNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/version_no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tvVersionNo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:id="@+id/lFacebookLayout"
    >

        <TextView
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/please_like_us_on_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvLinkHeading"/>
        <Button
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:layout_marginTop="10dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_apps"
                android:id="@+id/bLink"
                android:contentDescription="@string/link_button"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>